# pdf_bunch_print

./: .clang-tidy  CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  mainwindow.cpp  mainwindow.hpp  printer_launcher.cpp  printer_launcher.hpp
.gear/: pdf-bunch-print.spec  pdf_bunch_print.spec  rules
resources/: resources.qrc
resources/translations/: ru_RU.ts
service/: pdf_bunch_print.desktop  pdf_bunch_print_gnome.desktop
